--- a/src/index.css
+++ b/src/index.css
@@ -45,5 +45,27 @@ a:hover {
 
 
 /*FOOTER*/
+#footer {
+  background: #333;
+  color: white;
+  text-align: center;
+  padding: 10px 0;
+}
 
+.footer-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.footer-link-container {
+  margin-top: 10px,
+}
+
+.footer-link {
+  color: white;
+  text-decoration: none;
+  margin: 0 10px;
+}
 /*BOOKSHELF*/
