--- a/src/index.css
+++ b/src/index.css
@@ -81,19 +81,16 @@ li a {
 /*BOOKCARD*/
 .card {
   width: 15rem;
-  
-
 }
 .card-img-container {
   position: relative;
   overflow: hidden;
   border-radius: 10px;
-  ;
 }
 
 .card-img {
   width: 80%;
-  filter: blur(0); 
+  filter: blur(0);
   transition: filter 0.3s ease-in-out;
 }
 
@@ -105,13 +102,11 @@ li a {
   backdrop-filter: blur(5px);
   border-radius: 10px;
   padding: 10px;
-  opacity: 0; 
-  transition: opacity 0.3s ease-in-out; 
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
   text-decoration: none;
   color: white;
   text-align: center;
-  
-  
 }
 
 .card:hover .card-img {
@@ -122,8 +117,6 @@ li a {
   opacity: 1;
 }
 
-
-
 /*ABOUT*/
 .about-page {
   max-width: 95%;
@@ -132,7 +125,7 @@ li a {
   margin-bottom: 15px;
 }
 .about-section {
-  background: url('/src/assets/aboutimage.webp');
+  background: url("/src/assets/aboutimage.webp");
   background-size: center;
   background-position: center;
   color: white;
@@ -193,7 +186,7 @@ li a {
 }
 
 .contact-form textarea {
-  resize: vertical; 
+  resize: vertical;
 }
 
 .contact-form button {
@@ -204,7 +197,7 @@ li a {
   border: none;
   border-radius: 10px;
   cursor: pointer;
-  margin-left: 13.9%;/*submit button in the middle of the form*/
+  margin-left: 13.9%; /*submit button in the middle of the form*/
 }
 
 .contact-form button:hover {
@@ -255,7 +248,25 @@ li a {
   color: #e4e5e9;
 }
 
-/*AMAZONCAROUSEL*/
+#button-shelf {
+  font-family: var(--font-family);
+  background-color: #333; 
+  border-color: #333; 
+  color: #fff; 
+  font-weight: bold; 
+  text-transform: uppercase; 
+  letter-spacing: 1px; 
+  border-radius: 4px; 
+  padding: 10px 20px; 
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); 
+  transition: background-color 0.3s ease-in-out, transform 0.3s ease; 
+}
+
+#button-shelf:hover {
+  background-color: #555; 
+  transform: translateY(-2px); 
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); 
+}
 
 /*FOOTER*/
 #footer {
