--- a/src/index.css
+++ b/src/index.css
@@ -80,7 +80,7 @@ li a {
 
 /*BOOKCARD*/
 .card {
-  width: 25rem;
+  width: 100%;
 }
 
 .card-img-container {
@@ -90,7 +90,8 @@ li a {
 }
 
 .card-img {
-  width: 80%;
+  width: 100%;
+  /* height: 100%; */
   filter: blur(0);
   transition: filter 0.3s ease-in-out;
 }
