--- a/src/index.css
+++ b/src/index.css
@@ -85,7 +85,7 @@ li a {
 
 .card-img-container {
   position: relative;
-  overflow: hidden;
+  /* overflow: hidden; */
   border-radius: 10px;
 }
 
@@ -107,7 +107,7 @@ li a {
   opacity: 0;
   transition: opacity 0.3s ease-in-out;
   text-decoration: none;
-  color: white;
+  color: #198754;
   text-align: center;
 }
 
