fixed contact form

--- a/src/index.css
+++ b/src/index.css
@@ -168,7 +168,7 @@ li a {
   width: 75%;
   margin: 0 auto;
   padding: 20px;
-  background-color: #f4f0f0;
+  background-color: #d5c8b8;
   margin-top: 40px;
 }
 
@@ -182,7 +182,7 @@ li a {
   width: 100%;
   padding: 10px;
   margin-bottom: 15px;
-  border: 1px solid #959292;
+  border: 1px solid #d5c8b8;
 }
 
 .contact-form textarea {
