--- a/src/index.css
+++ b/src/index.css
@@ -80,12 +80,14 @@ li a {
 
 /*BOOKCARD*/
 .card {
+  max-width: 25px;
   width: 100%;
+
 }
 
 .card-img-container {
   position: relative;
-  /* overflow: hidden; */
+  overflow: hidden;
   border-radius: 10px;
 }
 
@@ -104,11 +106,12 @@ li a {
   backdrop-filter: blur(5px);
   border-radius: 10px;
   padding: 10px;
-  opacity: 0;
+  opacity: 1;
   transition: opacity 0.3s ease-in-out;
   text-decoration: none;
   color: #198754;
   text-align: center;
+  font-size: 12px;
 }
 
 .card:hover .card-img {
@@ -148,11 +151,11 @@ li a {
 }
 
 /*Cards within About*/
-.card {
+/* .card {
   margin-bottom: 20px;
   margin-top: 10px;
-}
-
+} */
+/* 
 .card-body {
   padding: 10px;
   margin-top: 5px;
@@ -161,7 +164,7 @@ li a {
 .card-img-top {
   height: 200px;
   object-fit: cover;
-}
+} */
 
 /*CONTACT*/
 .contact-form {
