--- a/src/index.css
+++ b/src/index.css
@@ -80,9 +80,8 @@ li a {
 
 /*BOOKCARD*/
 .card {
-  max-width: 25px;
+  max-width: 250px; /* Adjust as needed */
   width: 100%;
-
 }
 
 .card-img-container {
@@ -93,21 +92,26 @@ li a {
 
 .card-img {
   width: 100%;
-  /* height: 100%; */
+  height: auto; /* Ensure image maintains aspect ratio */
   filter: blur(0);
   transition: filter 0.3s ease-in-out;
 }
 
 .card-hover-content {
   position: absolute;
-  top: 60%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   backdrop-filter: blur(5px);
   border-radius: 10px;
   padding: 10px;
-  opacity: 1;
+  opacity: 0;
   transition: opacity 0.3s ease-in-out;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   text-decoration: none;
   color: #198754;
   text-align: center;
@@ -121,6 +125,7 @@ li a {
 .card:hover .card-hover-content {
   opacity: 1;
 }
+
 
 /*ABOUT*/
 .about-page {
