--- a/src/index.css
+++ b/src/index.css
@@ -85,17 +85,21 @@ li a {
 .card {
   max-width: 250px; 
   width: 100%;
+  padding: 0 !important;
 }
 
 .card-img-container {
   position: relative;
   overflow: hidden;
   border-radius: 10px;
+  height: 100% !important;
 }
 
 .card-img {
   width: 100%;
-  height: auto;
+  height: 100%;
+  max-height: 300px;
+  object-fit: cover;
   filter: blur(0);
   transition: filter 0.3s ease-in-out;
 }
