--- a/src/index.css
+++ b/src/index.css
@@ -85,6 +85,8 @@ li a {
 .card {
   max-width: 250px; 
   width: 100%;
+  padding: 0 !important;
+  border-radius: 10px;
 }
 
 .card-img-container {
@@ -98,6 +100,8 @@ li a {
   height: auto;
   filter: blur(0);
   transition: filter 0.3s ease-in-out;
+  object-fit: cover !important;
+  max-height: 300px;
 }
 
 .card-hover-content {
