--- a/src/index.css
+++ b/src/index.css
@@ -88,7 +88,9 @@ li a {
   padding: 0 !important;
   border-radius: 10px;
 }
-
+.book-card-link{
+  height: 100%;
+}
 .card-img-container {
   position: relative;
   overflow: hidden;
@@ -99,12 +101,12 @@ li a {
 .card-img {
   width: 100%;
   height: 100%;
-  max-height: 300px;
+  /* max-height: 300px; */
   object-fit: cover;
   filter: blur(0);
   transition: filter 0.3s ease-in-out;
-  object-fit: cover !important;
-  max-height: 300px;
+  /* object-fit: cover !important; */
+  /* max-height: 300px; */
 }
 
 .card-hover-content {
