--- a/src/index.css
+++ b/src/index.css
@@ -82,7 +82,7 @@ li a {
 }
 
 /*BOOKCARD*/
-.card {
+.book-card {
   max-width: 250px;
   width: 100%;
   padding: 0 !important;
@@ -91,14 +91,14 @@ li a {
 .book-card-link {
   height: 100%;
 }
-.card-img-container {
+.book-card-img-container {
   position: relative;
   overflow: hidden;
   border-radius: 10px;
   height: 100% !important;
 }
 
-.card-img {
+.book-card-img {
   width: 100%;
   height: 100%;
   /* max-height: 300px; */
@@ -130,11 +130,11 @@ li a {
   font-size: 12px;
 }
 
-.card:hover .card-img {
+.book-card:hover .card-img {
   filter: blur(3px);
 }
 
-.card:hover .card-hover-content {
+.book-card:hover .card-hover-content {
   opacity: 1;
 }
 
@@ -180,7 +180,11 @@ li a {
   transition: transform 0.3s ease; 
 }
 
-.about-card .card-body {
+.about-card .card-body { 
+  padding: 15px;
+  margin-top: 5px;
+}
+
 
 /*CONTACT*/
 .contact-form {
