--- a/src/index.css
+++ b/src/index.css
@@ -143,8 +143,8 @@ li a {
   max-width: 95%;
   padding: 12px;
   margin-bottom: 15px;
-  margin-left: 70px;
-  margin-right: 70px;
+  margin-left: auto;
+  margin-right: auto;
 }
 .about-section {
   background: url("/src/assets/aboutimage.webp");
@@ -188,7 +188,7 @@ li a {
 
 /*CONTACT*/
 .contact-form {
-  width: 75%;
+  width: 40%;
   margin: 0 auto;
   padding: 20px;
   background-color: var(--background--color);
@@ -205,7 +205,7 @@ li a {
   width: 100%;
   padding: 10px;
   margin-bottom: 15px;
-  border: 1px solid #d5c8b8;
+  border: 1px solid var(--background--color);
 }
 
 .contact-form textarea {
