--- a/src/index.css
+++ b/src/index.css
@@ -183,6 +183,9 @@ li a {
   margin-top: 20px;
   overflow: hidden;
 }
+.about-card .card-title {
+  padding: 10px;
+}
 .about-card .card-img-top{
   height: 200px;
   object-fit: cover;
