--- a/src/index.css
+++ b/src/index.css
@@ -199,7 +199,9 @@ li a {
   padding: 10px;
   margin-top: 5px;
 }
-
+.custom-card-width {
+  width: 90%; 
+}
 
 /*CONTACT*/
 .contact-form {
@@ -247,6 +249,26 @@ li a {
     padding: 10px;
   }
 }
+/* Media query for screens with a width of 800px and height of 1280px */
+@media (min-width: 800px) and (min-height: 1280px) {
+  .contact-form {
+    width: 65%;
+  }
+}
+@media (min-width: 768px) and (min-height: 1024px) {
+  .contact-form {
+    width: 65%;
+  }
+}
+@media (min-width: 712px) and (min-height: 1138px) {
+  .contact-form {
+    width: 85%;
+  }
+}
+
+
+
+
 
 /*BOOKPAGE*/
 #book-image {
