--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@1,200&family=Space+Grotesk&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@520&display=swap');
+
+
 @import "@fortawesome/fontawesome-free/css/all.css";
 
 /* Add this at the bottom of your CSS file */
@@ -11,6 +14,7 @@
 
 :root {
   --font-family: "Times New Roman", Times, serif;
+  --text-card: "Space Grotesk", sans-serif;
   --font-color: black;
   --background--color: #d5c8b8;
 }
@@ -95,34 +99,34 @@ li a {
   width: 100%;
   padding: 0 !important;
   border-radius: 10px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.5);
+ 
 }
 .book-card-link{
   height: 100%;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.5);
 }
 .card-img-container {
   position: relative;
   overflow: hidden;
   border-radius: 10px;
   height: 100% !important;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.5);
+  
 }
 
+/* .book-card {
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.5);
+} */
 .card-img {
   width: 100%;
   height: 100%;
   object-fit: cover;
   filter: blur(0);
   transition: filter 0.3s ease-in-out;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.5);
   
 }
-
-@media (max-width: 575px) {
-  .book-card-img {
-    max-width: 60% !important;
-    max-height: 60% !important;
-  }
-  /* .book-card .book-card-img-container {
-    height: auto !important;  */
-  }
 
 
 .card-hover-content {
@@ -131,7 +135,7 @@ li a {
   left: 0;
   width: 100%;
   height: 100%;
-  backdrop-filter: blur(5px);
+  backdrop-filter: blur(20px);
   border-radius: 10px;
   padding: 10px;
   opacity: 0;
@@ -141,9 +145,20 @@ li a {
   justify-content: center;
   align-items: center;
   text-decoration: none;
-  color: #198754;
+  color: #000000;
   text-align: center;
-  font-size: 12px;
+  font-size: 18px;
+  font-family: var(--text-card);
+  
+
+
+}
+.small-card{
+  background:rgba(255, 255, 255, 30%);
+
+  font-family: var(--text-card);
+
+
 }
 
 .card:hover .card-img {
