--- a/src/index.css
+++ b/src/index.css
@@ -182,6 +182,11 @@ li a {
   margin-bottom: 20px;
   margin-top: 20px;
   overflow: hidden;
+  position: relative;
+  transition: transform 0.3s ease;
+}
+.about-card:hover {
+  transform: scale(1.1); /* enlarge the card on hover */
 }
 .about-card .card-title {
   padding: 10px;
@@ -190,11 +195,6 @@ li a {
   height: 200px;
   object-fit: cover;
 }
-.about-card:hover .card-img-top {
-  transform: scale(1.1); 
-  transition: transform 0.3s ease; 
-}
-
 .about-card .card-body { 
   padding: 10px;
   margin-top: 5px;
@@ -265,10 +265,6 @@ li a {
     width: 85%;
   }
 }
-
-
-
-
 
 /*BOOKPAGE*/
 #book-image {
