added some css fixes for header and bookcard

--- a/src/index.css
+++ b/src/index.css
@@ -55,7 +55,7 @@ li a {
 /*HEADER*/
 /* Header.css */
 .header-background {
-  height: 80vh;
+  background-image: url("/src/assets/headerphoto.jpeg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -63,6 +63,15 @@ li a {
   justify-content: center;
   align-items: center;
   text-align: center;
+  position: sticky;
+  top: 0;
+  z-index: 10;
+}
+
+@media (max-width: 768px) {
+  .header-background {
+ /* Adjust the height for smaller screens */
+  }
 }
 #header-title {
   font-family: var(--font-family);
