--- a/src/index.css
+++ b/src/index.css
@@ -36,16 +36,15 @@ body,
 }
 
 /*NAVBAR*/
+.navbar {
+  background-color: rgba(37, 37, 49, 0.85);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.5);
+}
 
 li a {
   color: white !important;
   font-size: 26px;
   font-family: var(--font-family);
-}
-
-.navbar-container {
-  background-color: rgba(37, 37, 49, 0.85);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.5);
 }
 
 .navbar a:hover {
@@ -162,7 +161,6 @@ li a {
 
 /*ABOUT*/
 .about-page {
-  max-width: 95%;
   padding: 12px;
   margin-bottom: 15px;
   margin-left: auto;
@@ -208,19 +206,23 @@ li a {
 }
 
 .about-card:hover {
-  transform: scale(1.1); /* enlarge the card on hover */
+  transform: scale(1.05); /* enlarge the card on hover */
 }
+
 .about-card .card-title {
   padding: 10px;
 }
+
 .about-card .card-img-top {
   height: 200px;
   object-fit: cover;
 }
+
 .about-card .card-body {
   padding: 10px;
   margin-top: 5px;
 }
+
 .custom-card-width {
   width: 90%;
 }
@@ -265,6 +267,7 @@ li a {
 .contact-form button:hover {
   background-color: rgb(123, 148, 86);
 }
+
 @media (max-width: 768px) {
   .contact-form {
     width: 100%;
