--- a/src/index.css
+++ b/src/index.css
@@ -355,6 +355,20 @@ li a {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 }
 
+/*BOOKSHELF*/
+/* Each status has a coresponding rgba value */
+.to-read {
+  background-color: rgba(255, 127, 127, 0.4); /* Red for "To Read" */
+}
+
+.reading {
+  background-color: rgba(255, 255, 127, 0.4); /* Yellow for "Reading" */
+}
+
+.read {
+  background-color: rgba(127, 255, 127, 0.4); /* Green for "Read" */
+}
+
 /*FOOTER*/
 #footer {
   background-color: rgba(37, 37, 49, 0.85);
@@ -380,4 +394,3 @@ li a {
   text-decoration: none;
   margin: 0 10px;
 }
-/*BOOKSHELF*/
